--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/Users/vince/Desktop/JFX/jaxb-api-2.2.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vince/Desktop/JFX/jaxb-impl-2.3.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
